# FlattenBinaryTree

./: CMakeLists.txt  README.md
inc/: node.hpp  solution.hpp
src/: main.cpp  solution.cpp
